# rustx

./: .gitignore  Cargo.toml  build.rs
.claude/: CLAUDE.md
benches/: kv_store_benchmark.rs  log_formatter_text_benchmark.rs  logger_benchmark.rs
benches/kv/: store_benchmark.rs
benches/log/formatter/: text_formatter_benchmark.rs
cfg/: Cargo.toml  README.md
cfg/examples/: basic_usage.rs
cfg/src/: duration.rs  lib.rs  tests.rs
configs/grpc_layers_echo_server/: aop.json5  service.json5
configs/http_layers_echo_server/: aop.json5  log.json5
examples/: aop_basic.rs  aop_combined.rs  aop_global_manager.rs  aop_metric.rs  aop_retry.rs  aop_tracer_config.rs  aop_tracer_usage.rs  cfg_apollo_source_usage.rs  cfg_create_trait_with_watch.rs  cfg_create_with_watch.rs  cfg_file_source_usage.rs  cfg_global_source_usage.rs  cfg_register_sources.rs  fs_file_watcher_usage.rs  grpc_echo_client.rs  grpc_echo_server.rs  grpc_echo_trace.rs  grpc_layers_echo_server.rs  http_echo_client.rs  http_echo_server.rs  http_layers_echo_server.rs  kv_store_dash_map_store.rs  kv_store_hash_map_store.rs  kv_store_loadable_sync_store.rs  kv_store_redis_store.rs  kv_store_rwlock_hash_map_store.rs  kv_store_safe_hash_map_store.rs  kv_store_store_usage.rs  kv_store_unified.rs  kv_store_unsafe_hash_map_store.rs  log_global_logger.rs  log_logger_instance.rs  log_sync_usage.rs  oss_basic_ops.rs  oss_manager_ops.rs  oss_stream_ops.rs
examples/cfg/: apollo_source_usage.rs  cfg_basic_usage.rs  cfg_serialization.rs  file_source_usage.rs  register_trait_usage.rs  register_usage.rs  trait_usage.rs  usage.rs
examples/cfg/configs/: cache.json  database.json
examples/configs/cfg/: database.json5  server.json5
examples/configs/kv_store/: dash_map_store.json5  hash_map_store.json5  redis_store.json5  rwlock_hash_map_store.json5  unsafe_hash_map_store.json5
examples/configs/log/: logger.json5
examples/kv/: kv_placeholder.rs  map_store_config_example.rs  map_store_example.rs
examples/kv/serializer/: protobuf_usage.rs  serializer_usage.rs
examples/kv/store/: hash_map_store.rs  map_store.rs  redis_store.rs  safe_hash_map_store.rs  store_usage.rs
examples/kv/store/configs/: safe_hash_map_store.json
examples/log/: basic_usage.rs  file_appender_usage.rs  global_default_logger.rs  global_init_logger.rs  logger.json5  struct_metadata.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
proto/: echo.proto  test_message.proto
src/: lib.rs
src/aop/: README.md  aop.rs  aop_manager.rs  global_aop_manager.rs  macros.rs  metric.rs  metrics.rs  mod.rs  tracer.rs  tracing.rs
src/cfg/: README.md  apollo_source.rs  config.rs  configurable.rs  duration.rs  file_source.rs  global_source.rs  macros.rs  mod.rs  register.rs  registry.rs  reloader.rs  serde_duration.rs  source.rs  type_options.rs
src/fs/: README.md  file_watcher.rs  global.rs  global_file_watcher.rs  mod.rs  watcher.rs
src/kv/: loader.rs  mod.rs  parser.rs  serializer.rs  store.rs
src/kv/loader/: README.md  core.rs  empty_kv_stream.rs  empty_stream.rs  file_trigger.rs  kv_file_loader.rs  kv_file_stream.rs  mod.rs  plan.md  registry.rs
src/kv/parser/: README.md  bson_parser.rs  core.rs  json_parser.rs  line_parser.rs  mod.rs  parse_value.rs  register.rs  registry.rs
src/kv/serializer/: README.md  bson_serializer.rs  core.rs  json_serializer.rs  mod.rs  msgpack_serializer.rs  protobuf_serializer.rs  register.rs  registry.rs
src/kv/store/: README.md  common_tests.rs  core.rs  dash_map_store.rs  hash_map_store.rs  loadable_sync_store.rs  map_store.rs  mod.rs  redis_store.rs  register.rs  registry.rs  rwlock_hash_map_store.rs  safe_hash_map_store.rs  unsafe_hash_map_store.rs
src/log/: README.md  global.rs  global_logger_manager.rs  level.rs  log_record.rs  logger.rs  logger_manager.rs  macros.rs  manager.rs  mod.rs  record.rs  registry.rs
src/log/appender/: console_appender.rs  core.rs  file_appender.rs  mod.rs  registry.rs  rolling_file_appender.rs  trait_.rs
src/log/formatter/: core.rs  json_formatter.rs  mod.rs  registry.rs  text_formatter.rs  trait_.rs
src/oss/: README.md  ali_oss_object_store.rs  aop_object_store.rs  aws_s3_object_store.rs  error.rs  gcp_gcs_object_store.rs  mod.rs  object_store.rs  object_store_manager.rs  object_store_manager_types.rs  object_store_types.rs  uri.rs
src/proto/: mod.rs  test.rs
tests/: test_cfg.rs  test_kv.rs  test_macros.rs
tests/cfg/: apollo_integration_tests.rs  integration_tests.rs  mod.rs  zero_coupling_tests.rs
tests/deploy/: .env  docker-compose.yml
tests/deploy/apollo/: docker-compose.yml
tests/deploy/apollo/sql/: 01-apolloconfigdb.sql  02-apolloportaldb.sql  03-testdata.sql
tests/deploy/jaeger/: docker-compose.yml
tests/deploy/mysql/: docker-compose.yml
tests/deploy/redis/: docker-compose.yml
tests/kv/: integration_tests.rs  mod.rs
