[package]
name = "rustx"
version = "0.1.0"
authors = ["hatlonely <hatlonely@foxmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hatlonely/rustx"

[lib]
name = "rustx"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
json5 = "0.4"
serde_with = "3.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-trait = "0.1"
rmp-serde = "1.1"
bson = "2.8"
prost = "0.12"
bytes = "1.0"
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
log = "0.4"
dunce = "1.0"
rayon = "1.10"
num_cpus = "1.16"
rustx-macros = { path = "macros" }
colored = "2.1"
chrono = "0.4"
smart-default = "0.7"
flate2 = "1.0"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.0"
mockito = "1.2"
serial_test = "3.0"
criterion = "0.5"

[[bench]]
name = "text_formatter_benchmark"
path = "benches/log/formatter/text_formatter_benchmark.rs"
harness = false
