[package]
name = "rustx"
version = "0.1.0"
authors = ["hatlonely <hatlonely@foxmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hatlonely/rustx"

[lib]
name = "rustx"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
json5 = "0.4"
serde_with = "3.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
notify = "6.0"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-trait = "0.1"
rmp-serde = "1.1"
bson = "2.8"
prost = "0.14"
bytes = "1.0"
redis = { version = "1.0.2", features = ["aio", "tokio-comp", "connection-manager"] }
log = "0.4"
dunce = "1.0"
rayon = "1.10"
num_cpus = "1.16"
rustx-macros = { path = "macros" }
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
smart-default = "0.7"
flate2 = "1.0"
garde = { version = "0.22", features = ["derive", "regex"] }

# Object Storage dependencies
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
# 阿里云 OSS SDK (启用 async feature)
aliyun-oss-rust-sdk = { version = "0.2", features = ["async"] }
urlencoding = "2.1"
# GCP Cloud Storage
google-cloud-storage = "1.6"
google-cloud-auth = "1.4"
google-cloud-gax-internal = { version = "0.7.7", features = ["_internal-common"] }
futures = "0.3"
quick-xml = { version = "0.31", features = ["serialize"] }
glob = "0.3"
# CLI tools
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
dirs = "5.0"
shellexpand = "3.1"
regex-lite = "0.1"
backon = "1.3"
rand = "0.8"
# OpenTelemetry dependencies
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "grpc-tonic"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-tracing-opentelemetry = "0.32"
tonic_prometheus_layer = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "follow-redirect"] }
http = "1.0"
# Tracing dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
# Prometheus metrics
prometheus-client = "0.22"
prometheus = "0.13"
axum-prometheus = "0.7"

[build-dependencies]
prost-build = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.0"
mockito = "1.2"
serial_test = "3.0"
criterion = "0.5"

[[bench]]
name = "text_formatter_benchmark"
path = "benches/log/formatter/text_formatter_benchmark.rs"
harness = false

[[bin]]
name = "oss"
path = "src/bin/oss/main.rs"
