[package]
name = "cfg"
description = "Configuration management library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }