[package]
name = "cfg"
description = "Configuration management library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.4"
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }